--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this expense", @expense %> |
-  <%= link_to "Back to expenses", expenses_path %>
+  <%= link_to "Show this expense", group_expense_path(@group, @expense) %> |
+  <%= link_to "Back to expenses", group_expenses_path(@group) %>
 </div>
