--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,22 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <% if user_signed_in? %>
-    <%= button_to "Logout", destroy_user_session_path , { method: :delete, data: { turbo: false }}%>
+    <% if user_signed_in?%>
+      <div class="nav-container">
+        <nav>
+          <div>
+            <h2 class=logo>i-<span class=logo-section>Expense<span></h2>
+          </div>
+          <div class="nav-links">
+              <div id="logout-button">
+                <%= button_to "Logout", destroy_user_session_path, { method: :delete, data: { turbo:false }}%>
+              </div>
+          </div>
+        </nav>
+      </div>
     <% end %>
-    <%= yield %>
+    <div>   
+      <%= yield %>
+    </div>
   </body>
 </html>
