--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bona+Nova:wght@400;700&display=swap');
 
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: 0px;;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   max-width: 100%;
   overflow-x: hidden;
 }
@@ -31,7 +32,7 @@ nav {
 
 .logo {
   color: #69e90e;
-  font-size: 30px
+  font-size: 30px;
 }
 
 .logo-section {
@@ -71,24 +72,24 @@ nav {
 .splash_buttons {
   display: flex;
   flex-direction: column;
-  gap:20px;
+  gap: 20px;
   width: 80%;
 }
 
-.app_button{
-  background-color: #3778c2;;
+.app_button {
+  background-color: #3778c2;
   padding: 10px;
   text-align: center;
   cursor: pointer;
   font-size: 25px;
 }
 
-.app_button:hover{
+.app_button:hover {
   background-color: rgb(136, 148, 159);
 }
 
-.app_categories-button { 
-  background-color: #3778c2;;
+.app_categories-button {
+  background-color: #3778c2;
   padding: 10px;
   text-align: center;
   cursor: pointer;
@@ -125,7 +126,7 @@ nav {
   width: 70px;
 }
 
-.groups{
+.groups {
   display: flex;
   width: 85%;
   padding: 4px;
@@ -157,7 +158,7 @@ nav {
   margin-top: 20px;
 }
 
-.Add-cat{
+.Add-cat {
   position: fixed;
   background-color: #5fb523;
   width: 100%;
@@ -167,7 +168,7 @@ nav {
 }
 
 .cat {
-  color:#f9f9f9;
+  color: #f9f9f9;
   font-size: 30px;
 }
 
@@ -189,7 +190,7 @@ nav {
 
 .expenses {
   margin-top: 25px;
-  width: 85%;
+  width: 80%;
 }
 
 .new-expense {
@@ -207,6 +208,10 @@ nav {
   font-size: 30px;
 }
 
+.expense-info {
+  flex: 1;
+}
+
 .expense-container {
   display: flex;
   justify-content: space-between;
@@ -214,4 +219,5 @@ nav {
   border: #3778c2 1px solid;
   width: 100%;
   margin-top: 24px;
+  padding: 5px;
 }
