--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -221,3 +221,102 @@ nav {
   margin-top: 24px;
   padding: 5px;
 }
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #3778c2;
+}
+
+.form-container h2 {
+  color: #f9f9f9;
+  font-family: 'Bona Nova', serif;
+  font-size: 30px;
+}
+
+.new_user {
+  margin: 50px 12px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-new-container form label {
+  color: #f9f9f9;
+  font-family: 'Bona Nova', serif;
+  font-size: 20px;
+  margin-top: 4px;
+}
+
+.new_user .field label {
+  color: #f9f9f9;
+  font-family: 'Bona Nova', serif;
+  font-size: 15px;
+}
+
+.actions input {
+  background: none;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: solid black 1px;
+  border-radius: 0.25rem;
+  transition: 0.2s;
+  color: aliceblue;
+  cursor: pointer;
+}
+
+.form-new-container form input {
+  background: #f9f9f92d;
+  padding: 0.5rem;
+  margin-top: 12px;
+  font-size: 1rem;
+  border: solid black 1px;
+  border-radius: 0.25rem;
+  transition: 0.2s;
+  color: rgb(5, 5, 5);
+  cursor: pointer;
+}
+
+.new_user .field input {
+  margin: 12px 12px;
+  padding: 5px;
+}
+
+.form-container a {
+  background: none;
+  padding: 0.5rem;
+  border: solid black 1px;
+  border-radius: 0.25rem;
+  transition: 0.2s;
+  color: aliceblue;
+  cursor: pointer;
+  justify-self: center;
+  align-self: center;
+  font-family: 'Bona Nova', serif;
+  font-size: 15px;
+}
+
+.form-new-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #5893dc;
+}
+
+.title-f {
+  margin-bottom: 50px;
+  color: #f9f9f9;
+  font-family: 'Bona Nova', serif;
+}
+
+.form-new {
+  margin-bottom: 50px;
+}
