--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New expense</h1>
+<div class="form-new-container">
+  <div class="form-new">
+    <h1 class="title-f"> New expense</h1>
 
-<%= render "form", expense: @expense %>
+    <%= render "form", expense: @expense %>
 
-<br>
+    <br>
 
-<div>
-  <%= link_to "Back to expenses", group_expenses_path %>
+    <div>
+      <%= link_to "Back to expenses", group_expenses_path %>
+    </div>
+  </div>
 </div>
