--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,14 @@
-<h1>New group</h1>
 
-<%= render "form", group: @group %>
+<div class="form-new-container">
+  <div class="form-new">
+    <h1 class="title-f">New group</h1>
+    
+    <%= render "form", group: @group %>
 
-<br>
+    <br>
 
-<div>
-  <%= link_to "Back to groups", groups_path %>
+    <div>
+      <%= link_to "Back to groups", groups_path %>
+    </div>
+  </div>
 </div>
