--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,5 +1,7 @@
   <h1 class= "section" >Expenses</h1>
-
+  
+  <%= link_to " Back to Categories", groups_path, class: "back" %>
+  
   <div class= "expenses-container">
     <div class="card-expense">
       <%= image_tag @group.icon, class:'g-icon' %>
