--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,6 +2,7 @@
 
 <h1 class= "section">Categories</h1>
 
+<%= link_to " Back to Menu", root_path, class: "back" %>
 <div class= "groups-container">
   <div class="groups">
     <% @groups.each do |group| %>
